--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
     "name": "hardhat-fund-me",
     "author": "Will Musubi",
     "version": "1.0.0",
-    "dependencies": {
-        "prettier": "^2.8.3"
-    },
+    "dependencies": {},
     "devDependencies": {
         "@chainlink/contracts": "^0.6.0",
         "@ethersproject/abi": "^5.4.7",
@@ -22,6 +20,7 @@
         "hardhat": "^2.12.6",
         "hardhat-deploy": "^0.11.22",
         "hardhat-gas-reporter": "^1.0.8",
+        "prettier": "^2.8.3",
         "solhint": "^3.3.8",
         "solidity-coverage": "^0.8.0",
         "typechain": "^8.1.0"
